# mafold-agent

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: agent.rs  client.rs  daemon.rs  main.rs  update.rs
