[package]
name = "mafold-agent"
version = "0.1.0"
edition = "2021"
description = "Run Claude Code as your Mafold bot — connects to Mafold and drives Claude Code on your own machine."
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
