[package]
name = "mafold-cli"
version = "0.2.0"
edition = "2021"
description = "Mafold from your terminal — a CLI client (chats / send) + a Claude Code agent daemon."
license = "MIT"

[[bin]]
name = "mafold-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
